--- a/MARVEL APP/Scenes/Home/View/Cell/TableViewCell.xib
+++ b/MARVEL APP/Scenes/Home/View/Cell/TableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="TableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCell" rowHeight="128" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="MARVEL_APP" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="TableViewCell" selectionStyle="none" indentationWidth="10" reuseIdentifier="TableViewCell" rowHeight="128" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="MARVEL_APP" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="128"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
