--- a/MARVEL APP/Scenes/Home/View/Base.lproj/Home.storyboard
+++ b/MARVEL APP/Scenes/Home/View/Base.lproj/Home.storyboard
@@ -90,7 +90,7 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="selectedImageTintColor" systemColor="systemPinkColor"/>
                         <tabBarAppearance key="standardAppearance" backgroundImageContentMode="scaleToFill">
-                            <color key="backgroundColor" red="0.91764706370000004" green="0.270588249" blue="0.35686278339999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
